# opc-diag

./: .coveragerc  .gitignore  HISTORY.rst  Makefile  README.md  README.rst  ez_setup.py  opc-stub  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  install.rst  quickstart.rst  support.rst
features/: browse.feature  diff-item.feature  diff.feature  environment.py  extract.feature  repackage.feature  substitute.feature
features/steps/: helpers.py  opc_diag_steps.py  step_data.py
features/test_files/expected_output/: browse.content_types.txt  browse.core_props.txt  browse.pkg_rels.txt  diff-item.content_types.txt  diff-item.pkg_rels.txt  diff-item.slide_master.txt  diff.txt  substitute.txt
features/test_files/reference_pkgs/: changed.pptx
features/test_files/reference_pkgs/source/: [Content_Types].xml
features/test_files/reference_pkgs/source/_rels/: .rels
features/test_files/reference_pkgs/source/docProps/: app.xml  core.xml
features/test_files/reference_pkgs/source/ppt/: presProps.xml  presentation.xml  viewProps.xml
features/test_files/reference_pkgs/source/ppt/_rels/: presentation.xml.rels
features/test_files/reference_pkgs/source/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
features/test_files/reference_pkgs/source/ppt/slideMasters/: slideMaster1.xml
features/test_files/reference_pkgs/source/ppt/slideMasters/_rels/: slideMaster1.xml.rels
features/test_files/reference_pkgs/source/ppt/theme/: theme1.xml
opcdiag/: __init__.py  cli.py  controller.py  model.py  phys_pkg.py  presenter.py  view.py
src/opcdiag/: cli.py  controller.py  model.py  phys_pkg.py  presenter.py  view.py
tests/: test_cli.py  test_controller.py  test_model.py  test_phys_pkg.py  test_presenter.py  unitutil.py
tests/test-files/deleteme/: foobar_dir
tests/test-files/mini_pkg/: uri_2
tests/test_files/mini_pkg/: uri_1
