[project]
name = "opc-diag"
version = "1.0.0"
authors = [{name = "Steve Canny", email = "stcanny@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "lxml>=4",
    "opc-diag",
]
description = "A command-line application for exploring Microsoft Word, Excel, and PowerPoint files from Office 2007 and later."
keywords = ["docx", "pptx", "xlsx", "office", "openxml", "word", "powerpoint", "excel"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
opc = "opcdiag.cli:main"

[project.urls]
Changelog = "https://github.com//opc-diag/blob/master/HISTORY.rst"
Documentation = "https://opc-diag.readthedocs.org/en/latest/"
Homepage = "https://github.com/python-openxml/opc-diag"
Repository = "https://github.com/python-openxml/opc-diag"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.381",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
]

[tool.uv.sources]
opc-diag = { workspace = true }
